--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -18,7 +18,7 @@ spec:
         autoscaling.knative.dev/minScale: "1"
   source:
     git:
-      url: 
+      url: https://github.com/Simple-Org-123/java-rest.git
       ref:
         branch: main
   serviceClaims:
